--- a/Backtracking.html
+++ b/Backtracking.html
@@ -45,6 +45,27 @@ letter-spacing: 0px;
 color: #007EB4;
 opacity: 1;
         }
+
+        ol {
+            font: var(--unnamed-font-style-normal) normal normal var(--unnamed-font-size-18)/var(--unnamed-line-spacing-30) var(--unnamed-font-family-inter);
+letter-spacing: var(--unnamed-character-spacing-0);
+text-align: left;
+font: normal normal normal 18px/30px Inter;
+letter-spacing: 0px;
+color: #424242;
+opacity: 1;
+        }
+
+        li {
+            font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-300) var(--unnamed-font-size-18)/var(--unnamed-line-spacing-30) var(--unnamed-font-family-inter);
+letter-spacing: var(--unnamed-character-spacing-0);
+color: var(--unnamed-color-858585);
+text-align: left;
+font: normal normal 300 18px/30px Inter;
+letter-spacing: 0px;
+color: #858585;
+opacity: 1;
+        }
     
     </style>
 </head>
